# MatlabPool

./: .gitignore  CMakeLists.txt  Makefile  MatlabPool.hpp  MatlabPool.m  MatlabPoolLib.cpp  MatlabPoolTest.m  MatlabWorker.hpp  README.md  TestSuite.hpp  example_julia.m  example_latency.m  matlabpool_test.m  memCheckSuppress.txt  test.cpp  test.m  test_julia.m  time_julia.m
+fractal/: UniformSlices.m  get_colormap.m  julia.m  plot.m
MatlabPool/: Definitions.hpp  EngineHack.hpp  Job.hpp  LibLoader.hpp  Pool.hpp  Pool_impl.hpp  StreamBuf.hpp
include/: MatlabPool.hpp
src/: MatlabPoolLib.cpp  MatlabPoolLib.hpp  MatlabPoolMEX.cpp  MatlabPoolMEX.hpp  MexCommands.hpp  TestSuite.hpp  assert.hpp  matlab_mem_test.cpp  matlabpool_test.cpp  test.cpp
src/MatlabPool/: Assert.hpp  Exception.hpp  JobBase.cpp  JobBase.hpp  JobEval.cpp  JobEval.hpp  JobFeval.cpp  JobFeval.hpp  JobFuture.hpp  LibLoader.cpp  LibLoader.hpp  MatlabPool.hpp  Pool.cpp  Pool.hpp  PoolLibLoader.cpp  PoolLibLoader.hpp  Pool_impl.hpp  StreamBuf.cpp  StreamBuf.hpp  Utilities.cpp  Utilities.hpp
src/MatlabPool/MatlabPool/: Assert.hpp  EngineHack.hpp  Exception.hpp  Job.hpp  JobBase.hpp  JobEval.hpp  JobFeval.hpp  JobFuture.hpp  Job_future.hpp  LibLoader.hpp  Pool.hpp  Pool_impl.hpp  StreamBuf.hpp
src/MatlabPoolLib/: EngineHack.cpp  EngineHack.hpp  JobFuture.cpp  JobFuture.hpp  MatlabPoolLib.cpp  MatlabPoolLib.hpp  PoolImpl.cpp  PoolImpl.hpp  Pool_impl.cpp  Pool_impl.hpp
src/MatlabPoolMEX/: MatlabPoolMEX.cpp  MatlabPoolMEX.hpp  MexCommands.hpp
src/lib/: MexCommands.hpp  MexMatlabPool.cpp  MexMatlabPool.hpp  libMatlabPool.cpp
